= Changelog of IDEasy

This file documents all notable changes to https://github.com/devonfw/IDEasy[IDEasy].

== 2025.11.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1549[#1549]: IDEasy omits error messages when a download fails

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/37?closed=1[milestone 2025.11.001].

== 2025.10.002

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1492[#1492]: Add spring-boot CLI Commandlet.
* https://github.com/devonfw/IDEasy/issues/1545[#1545]: Yarn can not be installed after corepack

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/36?closed=1[milestone 2025.10.002].

== 2025.10.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/907[#907]: Implement ToolCommandlet for Yarn
* https://github.com/devonfw/IDEasy/issues/908[#908]: Get rid of Git error messages when retrieving settings status
* https://github.com/devonfw/IDEasy/issues/1362[#1362]: ide create fails when creating mvn settings-security file
* https://github.com/devonfw/IDEasy/issues/1506[#1506]: Create migration for 2025.10.001 to remove software/npm
* https://github.com/devonfw/IDEasy/issues/1530[#1530]: NPE on ide update with custom tool
* https://github.com/devonfw/IDEasy/issues/858[#858]: installing kotlincnative does not work

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/35?closed=1[milestone 2025.10.001].

== 2025.09.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1454[#1454]: Support for ng (angular CLI)
* https://github.com/devonfw/IDEasy/issues/1464[#1464]: IDEasy setup does not find bash
* https://github.com/devonfw/IDEasy/issues/1476[#1476]: IDEasy does not create links on extraction